сделать блок profile + адаптив к нему

--- a/index.html
+++ b/index.html
@@ -9,11 +9,37 @@
 
   <body class="page">
     <header class="header">
-
+      <img src="./images/UIkit/header__logo.png" class="header__logo" alt="Логотип">
     </header>
 
     <main class="content">
+      <section class="profile">
+        <img src="./images/profile__avatar.jpg" alt="Аватар" class="profile__avatar">
+        <div class="profile__info">
+          <div class="profile__info-placeholder">
+            <h2 class="profile__name">Жак-Ив Кусто</h2>
+            <img 
+              class="profile__edit-button" 
+              src="./images/UIkit/uikit-edit-button.png" 
+              alt="Кнопка редактирования">
+            <p class="profile__title">Исследователь океана</p>
+          </div>
+          <button class="profile__add-button-rectangle">
+            <img 
+              src="./images/UIkit/uikit-plus.png" 
+              alt="Иконка-добавить" 
+              class="uikit-plus">
+          </button>
+        </div>
+      </section>
 
-    </main>
+      <section class="photo-grid">
+
+      </section>
+    </main>`
+
+    <footer class="footer">
+
+    </footer>
   </body>
 </html>
