сделал photo-grid

--- a/index.html
+++ b/index.html
@@ -34,7 +34,48 @@
       </section>
 
       <section class="photo-grid">
-
+        <div class="photo-grid__item">
+          <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
+          <div class="photo-grid__name-block">
+            <h2 class="photo-grid__name">Ергаки</h2>
+            <div class="photo-grid__like-button"></div>
+          </div>
+        </div>
+        <div class="photo-grid__item">
+          <img src="./images/kamchatka.jpg" alt="Камчатка" class="photo-grid__image">
+          <div class="photo-grid__name-block">
+            <h2 class="photo-grid__name">Камчатка</h2>
+            <div class="photo-grid__like-button"></div>
+          </div>
+        </div>
+        <div class="photo-grid__item">
+          <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
+          <div class="photo-grid__name-block">
+            <h2 class="photo-grid__name">Ергаки</h2>
+            <div class="photo-grid__like-button"></div>
+          </div>
+        </div>
+        <div class="photo-grid__item">
+          <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
+          <div class="photo-grid__name-block">
+            <h2 class="photo-grid__name">Ергаки</h2>
+            <div class="photo-grid__like-button"></div>
+          </div>
+        </div>
+        <div class="photo-grid__item">
+          <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
+          <div class="photo-grid__name-block">
+            <h2 class="photo-grid__name">Ергаки</h2>
+            <div class="photo-grid__like-button"></div>
+          </div>
+        </div>
+        <div class="photo-grid__item">
+          <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
+          <div class="photo-grid__name-block">
+            <h2 class="photo-grid__name">Ергаки</h2>
+            <div class="photo-grid__like-button"></div>
+          </div>
+        </div>
       </section>
     </main>`
 
