--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
           </div>
         </div>
       </section>
-    </main>`
+    </main>
 
     <footer class="footer">
-
+      <small class="footer__copyright">&copy; 2022, Mesto Russia</small>
     </footer>
   </body>
 </html>
