сделать попап, переполнение текста в гриде

--- a/index.html
+++ b/index.html
@@ -33,47 +33,57 @@
         </div>
       </section>
 
+      <section class="popup">
+        <div class="popup__container">
+          <img src="./images/UIkit/uikit-close.png" alt="Иконка закрытия" class="uikit-close">
+          <h2 class="popup__heading">Редактировать профиль</h2>
+          <p class="popup__input popup__input_name">Жак-Ив Кусто</p>
+          <p class="popup__input popup__input_title">Исследователь океана</p>
+          <button class="popup__button"><span class="popup__button-text">Сохранить</span></button>
+        </div>
+      </section>
+
       <section class="photo-grid">
         <div class="photo-grid__item">
           <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
           <div class="photo-grid__name-block">
             <h2 class="photo-grid__name">Ергаки</h2>
-            <div class="photo-grid__like-button"></div>
+            <div class="uikit-like_disabled"></div>
           </div>
         </div>
         <div class="photo-grid__item">
           <img src="./images/kamchatka.jpg" alt="Камчатка" class="photo-grid__image">
           <div class="photo-grid__name-block">
             <h2 class="photo-grid__name">Камчатка</h2>
-            <div class="photo-grid__like-button"></div>
+            <div class="uikit-like_disabled"></div>
           </div>
         </div>
         <div class="photo-grid__item">
-          <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
+          <img src="./images/karachaevo-cherkessia.jpg" alt="Карачаево-Черкессия" class="photo-grid__image">
           <div class="photo-grid__name-block">
-            <h2 class="photo-grid__name">Ергаки</h2>
-            <div class="photo-grid__like-button"></div>
+            <h2 class="photo-grid__name">Карачаево-Черкессия</h2>
+            <div class="uikit-like_disabled"></div>
           </div>
         </div>
         <div class="photo-grid__item">
-          <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
+          <img src="./images/Man-Pupu-Ner.jpeg" alt="Маньпупунёр" class="photo-grid__image">
           <div class="photo-grid__name-block">
-            <h2 class="photo-grid__name">Ергаки</h2>
-            <div class="photo-grid__like-button"></div>
+            <h2 class="photo-grid__name">Маньпупунёр</h2>
+            <div class="uikit-like_disabled"></div>
           </div>
         </div>
         <div class="photo-grid__item">
-          <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
+          <img src="./images/smolensk.jpg" alt="Смоленск" class="photo-grid__image">
           <div class="photo-grid__name-block">
-            <h2 class="photo-grid__name">Ергаки</h2>
-            <div class="photo-grid__like-button"></div>
+            <h2 class="photo-grid__name">Смоленск</h2>
+            <div class="uikit-like_disabled"></div>
           </div>
         </div>
         <div class="photo-grid__item">
-          <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
+          <img src="./images/st-petersburg.jpg" alt="Санкт-Петербург" class="photo-grid__image">
           <div class="photo-grid__name-block">
-            <h2 class="photo-grid__name">Ергаки</h2>
-            <div class="photo-grid__like-button"></div>
+            <h2 class="photo-grid__name">Санкт-Петербург</h2>
+            <div class="uikit-like_disabled"></div>
           </div>
         </div>
       </section>
@@ -82,5 +92,6 @@
     <footer class="footer">
       <small class="footer__copyright">&copy; 2022, Mesto Russia</small>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
