--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="popup__container">
           <img src="./images/UIkit/uikit-close.png" alt="Иконка закрытия" class="uikit-close">
           <h2 class="popup__heading">Редактировать профиль</h2>
-          <p class="popup__input popup__input_name">Жак-Ив Кусто</p>
-          <p class="popup__input popup__input_title">Исследователь океана</p>
-          <button class="popup__button"><span class="popup__button-text">Сохранить</span></button>
+          <input class="popup__input" type="text" name="traveller-name" placeholder="Имя и фамилия" required></input>
+          <input class="popup__input" type="text" name="traveller-title" placeholder="О себе в нескольких словах"></input>
+          <button class="popup__button" type="submit"><span class="popup__button-text">Сохранить</span></button>
         </div>
       </section>
 
@@ -92,6 +92,6 @@
     <footer class="footer">
       <small class="footer__copyright">&copy; 2022, Mesto Russia</small>
     </footer>
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
