--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <form class="popup__container">
           <img src="./images/UIkit/uikit-close.png" alt="Иконка закрытия" class="uikit-close">
           <h2 class="popup__heading">Редактировать профиль</h2>
-          <input class="popup__input" type="text" name="traveller-name" placeholder="Имя и фамилия" required></input>
-          <input class="popup__input" type="text" name="traveller-title" placeholder="О себе в нескольких словах"></input>
+          <input class="popup__input" type="text" name="traveller-name" placeholder="Имя и фамилия" required>
+          <input class="popup__input" type="text" name="traveller-title" placeholder="О себе в нескольких словах">
           <button class="popup__button" type="submit"><span class="popup__button-text">Сохранить</span></button>
         </form>
       </section>
