исправил ошибку БЭМ

--- a/index.html
+++ b/index.html
@@ -48,42 +48,42 @@
           <img src="./images/ergaki.jpg" alt="Ергаки" class="photo-grid__image">
           <div class="photo-grid__name-block">
             <h2 class="photo-grid__name">Ергаки</h2>
-            <div class="uikit-like_disabled"></div>
+            <div class="uikit-like"></div>
           </div>
         </div>
         <div class="photo-grid__item">
           <img src="./images/kamchatka.jpg" alt="Камчатка" class="photo-grid__image">
           <div class="photo-grid__name-block">
             <h2 class="photo-grid__name">Камчатка</h2>
-            <div class="uikit-like_disabled"></div>
+            <div class="uikit-like"></div>
           </div>
         </div>
         <div class="photo-grid__item">
           <img src="./images/karachaevo-cherkessia.jpg" alt="Карачаево-Черкессия" class="photo-grid__image">
           <div class="photo-grid__name-block">
             <h2 class="photo-grid__name">Карачаево-Черкессия</h2>
-            <div class="uikit-like_disabled"></div>
+            <div class="uikit-like"></div>
           </div>
         </div>
         <div class="photo-grid__item">
           <img src="./images/Man-Pupu-Ner.jpeg" alt="Маньпупунёр" class="photo-grid__image">
           <div class="photo-grid__name-block">
             <h2 class="photo-grid__name">Маньпупунёр</h2>
-            <div class="uikit-like_disabled"></div>
+            <div class="uikit-like"></div>
           </div>
         </div>
         <div class="photo-grid__item">
           <img src="./images/smolensk.jpg" alt="Смоленск" class="photo-grid__image">
           <div class="photo-grid__name-block">
             <h2 class="photo-grid__name">Смоленск</h2>
-            <div class="uikit-like_disabled"></div>
+            <div class="uikit-like"></div>
           </div>
         </div>
         <div class="photo-grid__item">
           <img src="./images/st-petersburg.jpg" alt="Санкт-Петербург" class="photo-grid__image">
           <div class="photo-grid__name-block">
             <h2 class="photo-grid__name">Санкт-Петербург</h2>
-            <div class="uikit-like_disabled"></div>
+            <div class="uikit-like"></div>
           </div>
         </div>
       </section>
