--- a/index.html
+++ b/index.html
@@ -12,43 +12,6 @@
       <img src="./images/UIkit/header__logo.svg" class="header__logo" alt="Логотип">
     </header>
 
-    <section class="popup popup_role_edit-profile">
-      <div class="popup__container">
-        <button class="popup__uikit-close" type="button">
-          <img src="./images/UIkit/uikit-close.svg" alt="Иконка закрытия" class="popup__close-svg">
-        </button>
-        <form class="popup__form" name="edit-profile">
-          <h2 class="popup__heading">Редактировать профиль</h2>
-          <input class="popup__input" type="text" name="traveller-name" placeholder="Имя и фамилия" required>
-          <input class="popup__input" type="text" name="traveller-title" placeholder="О себе в нескольких словах">
-          <button class="popup__button" type="submit"><span class="popup__button-text">Сохранить</span></button>
-        </form>
-      </div>
-    </section>
-
-    <section class="popup popup_role_add-card">
-      <div class="popup__container">
-        <button class="popup__uikit-close" type="button">
-          <img src="./images/UIkit/uikit-close.svg" alt="Иконка закрытия" class="popup__close-svg">
-        </button>
-        <form class="popup__form" name="add-card">
-          <h2 class="popup__heading">Новое место</h2>
-          <input class="popup__input" type="text" name="card-name" placeholder="Название" required>
-          <input class="popup__input" type="text" name="card-link" placeholder="Ссылка на картинку">
-          <button class="popup__button" type="submit"><span class="popup__button-text">Создать</span></button>
-        </form>
-      </div>
-    </section>
-
-    <section class="popup popup_role_show-image">
-      <div class="popup__container-image">
-        <button class="popup__uikit-close" type="button">
-          <img src="./images/UIkit/uikit-close.svg" alt="Иконка закрытия" class="popup__close-svg">
-        </button>
-        <img src=" " alt=" " class="popup__image">
-        <h2 class="popup__caption"></h2>
-      </div>
-    </section>
 
     <main class="content">
       <section class="profile">
@@ -84,6 +47,44 @@
       <small class="footer__copyright">&copy; 2022, Mesto Russia</small>
     </footer>
 
+    <div class="popup popup_role_edit-profile">
+      <div class="popup__container">
+        <button class="popup__uikit-close" type="button">
+          <img src="./images/UIkit/uikit-close.svg" alt="Иконка закрытия" class="popup__close-svg">
+        </button>
+        <form class="popup__form" name="edit-profile">
+          <h2 class="popup__heading">Редактировать профиль</h2>
+          <input class="popup__input" type="text" name="traveller-name" placeholder="Имя и фамилия" required>
+          <input class="popup__input" type="text" name="traveller-title" placeholder="О себе в нескольких словах">
+          <button class="popup__button" type="submit"><span class="popup__button-text">Сохранить</span></button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_role_add-card">
+      <div class="popup__container">
+        <button class="popup__uikit-close" type="button">
+          <img src="./images/UIkit/uikit-close.svg" alt="Иконка закрытия" class="popup__close-svg">
+        </button>
+        <form class="popup__form" name="add-card">
+          <h2 class="popup__heading">Новое место</h2>
+          <input class="popup__input" type="text" name="card-name" placeholder="Название" required>
+          <input class="popup__input" type="text" name="card-link" placeholder="Ссылка на картинку">
+          <button class="popup__button" type="submit"><span class="popup__button-text">Создать</span></button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup_role_show-image">
+      <div class="popup__container-image">
+        <button class="popup__uikit-close" type="button">
+          <img src="./images/UIkit/uikit-close.svg" alt="Иконка закрытия" class="popup__close-svg">
+        </button>
+        <img src=" " alt=" " class="popup__image">
+        <h2 class="popup__caption"></h2>
+      </div>
+    </div>
+
     <template id="gridcard-template">
       <li class="photo-grid__item">
         <img src=" " alt=" " class="photo-grid__image">
@@ -94,6 +95,8 @@
         </div>
       </li>
     </template>
+
+    <script src="./scripts/data.js"></script>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
