fix: уникальные id в html

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
         <form class="popup__form" name="edit-profile" novalidate>
           <h2 class="popup__heading">Редактировать профиль</h2>
           <div class="popup__input-field">
-            <input id="popup__first-input" class="popup__input" type="text" name="traveller-name" placeholder="Имя и фамилия" required minlength="2" maxlength="40">
-            <span class="popup__first-input-error popup__input-error"></span>
+            <input id="popup__editprof-first-input" class="popup__input" type="text" name="traveller-name" placeholder="Имя и фамилия" required minlength="2" maxlength="40">
+            <span class="popup__editprof-first-input-error popup__input-error"></span>
           </div>
           <div class="popup__input-field">
-            <input id="popup__second-input" class="popup__input" type="text" name="traveller-title" placeholder="О себе в нескольких словах" required minlength="2" maxlength="200">
-            <span class="popup__second-input-error popup__input-error"></span>
+            <input id="popup__editprof-second-input" class="popup__input" type="text" name="traveller-title" placeholder="О себе в нескольких словах" required minlength="2" maxlength="200">
+            <span class="popup__editprof-second-input-error popup__input-error"></span>
           </div>
           <button class="popup__button" type="submit"><span class="popup__button-text">Сохранить</span></button>
         </form>
@@ -75,12 +75,12 @@
         <form class="popup__form" name="add-card" novalidate>
           <h2 class="popup__heading">Новое место</h2>
           <div class="popup__input-field">
-            <input id="popup__first-input" class="popup__input" type="text" name="card-name" placeholder="Название" required minlength="2" maxlength="30">
-            <span class="popup__first-input-error popup__input-error"></span>
+            <input id="popup__addcard-first-input" class="popup__input" type="text" name="card-name" placeholder="Название" required minlength="2" maxlength="30">
+            <span class="popup__addcard-first-input-error popup__input-error"></span>
           </div>
           <div class="popup__input-field">
-            <input id="popup__second-input" class="popup__input" type="url" name="card-link" placeholder="Ссылка на картинку" required>
-            <span class="popup__second-input-error popup__input-error"></span>
+            <input id="popup__addcard-second-input" class="popup__input" type="url" name="card-link" placeholder="Ссылка на картинку" required>
+            <span class="popup__addcard-second-input-error popup__input-error"></span>
           </div>
           <button class="popup__button" type="submit"><span class="popup__button-text">Создать</span></button>
         </form>
