fix: got rid of button text element and extra constants in formAdd sumbit function

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <input id="popup__editprof-second-input" class="popup__input" type="text" name="traveller-title" placeholder="О себе в нескольких словах" required minlength="2" maxlength="200">
             <span class="popup__editprof-second-input-error popup__input-error"></span>
           </div>
-          <button class="popup__button" type="submit"><span class="popup__button-text">Сохранить</span></button>
+          <button class="popup__button" type="submit">Сохранить</button>
         </form>
       </div>
     </div>
@@ -82,7 +82,7 @@
             <input id="popup__addcard-second-input" class="popup__input" type="url" name="card-link" placeholder="Ссылка на картинку" required>
             <span class="popup__addcard-second-input-error popup__input-error"></span>
           </div>
-          <button class="popup__button" type="submit"><span class="popup__button-text">Создать</span></button>
+          <button class="popup__button" type="submit">Создать</button>
         </form>
       </div>
     </div>
