--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </template>
 
     <script src="./scripts/data.js"></script>
-    <script src="./scripts/script.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/script.js"></script>
+    <script type="module" src="./scripts/validate.js"></script>
   </body>
 </html>
