--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
     <script src="./scripts/data.js"></script>
     <script type="module" src="./scripts/script.js"></script>
-    <script type="module" src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/Card.js"></script>
+    <script type="module" src="./scripts/FormValidator.js"></script>
   </body>
 </html>
