--- a/index.html
+++ b/index.html
@@ -108,9 +108,10 @@
       </li>
     </template>
 
-    <script src="./scripts/data.js"></script>
+    <script type="module" src="./scripts/data.js"></script>
     <script type="module" src="./scripts/script.js"></script>
     <script type="module" src="./scripts/Card.js"></script>
+    <script type="module" src="./scripts/Section.js"></script>
     <script type="module" src="./scripts/FormValidator.js"></script>
   </body>
 </html>
